refactor: simplify ApplicationHandlerHelper and DraftPatchAttachmentsHandler